# faulty_time

./: .gitignore  ChangeLog  Makefile.am  NEWS  bootstrap  bootstrap.conf  cfg.mk  configure  configure.ac  error.c  resuse.c  resuse.h  time.c  time.info  version.texi
doc/: texinfo.tex  time.texi  version.texi
lib/: getopt1.c  wait.h
lib2/: port.h
src/: resuse.c  resuse.h  rusage-kb.c  rusage-kb.h  time.c  version.c
tests/: help-version.sh  init.sh  time-aux.c  time-exit-codes.sh  time-format-T.sh  time-max-rss.sh  time-posix-quiet.sh
